Add remark command